--- a/高德测距.md
+++ b/高德测距.md
@@ -2,7 +2,7 @@
 #数据读取
 import pandas as pd
 data = pd.read_excel('0430_测距表.xlsx')
-## 数据处理
+# 数据处理
 # 高德测距原始数据中，数据集须有元素名称，测试目标品牌，门店名称，将数据按测试门店品牌分开。
 # 此外，需要添加一列元素与门店所属城市列，命名为“城市”，并将数据按不同城市分开。
 data.head() 
